test/golden/helloNL    {NLlet a = 5NL    b = 10NLin 1 + - SL lalalal}.3018767237106994099.golden

INITIALPATH:11:10: error:
    • parse error on input `/' in haskell expression
    • In the quasi-quotation: [fmt|hello
    {
let a = 5
    b = 10
in 1 + - / lalalal}|]
   |
11 | in 1 + - / lalalal}|]
   |          ^
